welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: not found: value taille
      marquer( T((h + decalage) % taille) )
                                  ^